# Homework_2011

./: .gitignore  .gitmodules  API.h  APIImplementation.cpp  Antided_2011.kdev4  AssemblyIO.cpp  AssemblyIO.h  BytecodeIO.cpp  BytecodeIO.h  CMakeConfigureProduction.cmake  CMakeLists.txt  CommandSet_original.cpp  CommandSet_original.h  Common.cmake  Defs.h  DictHTMLWriter.h  DictOpImpl.cpp  DictOpImpl.h  DictOperations.h  DictReader.h  DictStructures.h  Dictionary.cpp  DoubleLinkedList.cpp  DoubleLinkedList.h  Executor.cpp  Executor.h  Executor_int.cpp  Executor_int.h  Executor_service.cpp  Executor_service.h  Hashtable.cpp  Hashtable.h  Hashtest.cpp  Homework_2011.kdev4  Huffman.cpp  Huffman.h  InputServerApp.h  Interfaces.cpp  Interfaces.h  JIT_checklist.txt  (+42 more)
.kdev4/: Antided_2011.kdev4
Libs/uXray/: CMakeLists.txt  README.logger  build.h  debugmacros.h  encap.cpp  encap.h  fxassert.cpp  fxassert.h  fxcritical.cpp  fxcritical.h  fxcwrp.h  fxhash_functions.cpp  fxhash_functions.h  fxjitruntime.cpp  fxjitruntime.h  fxla.cpp  fxla.h  fxlog_console.cpp  fxlog_console.h  fxmath.cpp  fxmath.h  fxmisc.cpp  fxmisc.h  fxmodarch.cpp  fxmodarch.h  fxplugengine_posix.cpp  fxpxml.cpp  fxpxml.h  fxsearch.cpp  fxsearch.h  stdafx.h  time_ops.h  uXray.cbp  uXray.kdev4  uXray.layout
Libs/uXray/.kdev4/: uXray.kdev4
MTServerClientApp/: CMakeLists.txt  InputServerApp.h  KeyboardHookReader.cpp  ScrollLockTransmitter.cpp  SharedServerClientProtocol.h
backend_x86/: Backend.cpp  Backend.h  CMakeLists.txt  Codegen.cpp  Insn.h  Interfaces.h  ModRM.h  SIB.h  build.h
test_application/: CMakeLists.txt  main.cpp  ssb.c  ssb.h
x86backend/: Defs.h  Insn.h  ModRM.h  REX.h  Registers.h  SIB.h  x86Compile.cpp
